# marmol

./: .gitignore  Cargo.toml  Readme.md  faltan.md  graph_config_explanation.md  marmol.desktop  simbols.kra  simbols.kra~
egui_demo_lib/: Cargo.toml
egui_demo_lib/src/: color_test.rs  lib.rs
resources/: t
src/: buffer.rs  canvas.rs  command_palette.rs  configuraciones.rs  default_screen.rs  emojis.rs  excalidraw.rs  files.rs  format.rs  graph.rs  graph_state.rs  graph_ui.rs  iconize.rs  income.rs  kanban.rs  lib.rs  main.rs  main_area.rs  screens.rs  search.rs  server.rs  simple_args.rs  switcher.rs  syntax_highlighting.rs  tabs.rs  tasks.rs  theme.rs  toggle_switch.rs
src/easy_mark/: easy_mark_editor.rs  easy_mark_highlighter.rs  easy_mark_parser.rs  easy_mark_viewer.rs
src/egui_commonmark/: mod.rs
src/egui_commonmark/parsers/: pulldown.rs
src/egui_commonmark_backend/: alerts.rs  latex.rs  misc.rs  mod.rs  pulldown.rs
src/egui_dock/: style.rs  utils.rs
src/egui_dock/dock_state/: mod.rs  surface.rs  surface_index.rs  translations.rs  window_state.rs
src/egui_dock/dock_state/tree/: mod.rs  node_index.rs  tab_index.rs  tab_iter.rs
src/egui_dock/dock_state/tree/node/: leaf.rs  mod.rs  split.rs
src/egui_dock/widgets/: tab_viewer.rs
src/egui_dock/widgets/dock_area/: drag_and_drop.rs  mod.rs  state.rs  tab_removal.rs
src/egui_dock/widgets/dock_area/show/: leaf.rs  main_surface.rs  mod.rs  window_surface.rs
src/excalidraw/: data.rs  mod.rs  render.rs  ui_panel.rs  utils.rs
src/graph/: data.rs  logic.rs  mod.rs  ui.rs
src/main_area/: content_enum.rs  file_options.rs  file_tree.rs  left_controls.rs  metadata_renderer.rs
src/main_area/left_controls/: enums.rs
