[package]
name = "marmol"
version = "0.1.6"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
egui = "0.33"
egui_dock = { version = "0.18", features = ["serde"] }
egui_plot = "0.34"
chrono = "0.4.23"
syntect = "5.0"
base64 = "0.21"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
egui_extras = { version = "0.33", features = ["image","file"] }
filebuffer = "0.4.0"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
json = "0.12.4"
serde_yaml = "0.9"
yaml-rust = "0.4.5"
egui_commonmark = {version="0.22",features = ["svg","fetch"]}
rand = "0.9.2"
walkdir = "2.3.1"
regex = "1.7.2"
fstream = "0.1.2"
egui-twemoji = "0.8"
rust-embed = "8.9.0"
zip = "7.0.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
font-loader = "0.11"
directories = "2.0"
rfd = "0.11.3"
eframe = { version = "0.33", features = ["wgpu"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15", default-features = false }
eframe = { version = "0.33", default-features = false, features = ["wgpu", "android-native-activity", "default_fonts"] }
wgpu = { version = "27", default-features = false, features = ["gles"] }
egui-winit = { version = "0.33", default-features = false, features = ["clipboard", "links"] }
egui_keyboard = "0.5"
jni = "0.21"
android-activity = "0.6"

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
incremental = false
opt-level = "z"


[package.metadata.android]
package_name = "com.example.marmol"
version_code = 1
version_name = "1.0"
# Aquí es donde se definen los permisos en xbuild/cargo-apk:
permissions = [
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.MANAGE_EXTERNAL_STORAGE"
]

[package.metadata.android.activity]
name = "android.app.NativeActivity"
