[package]
name = "marmol"
version = "0.1.6"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", tag = "v0.2.0" }
egui = { version = "0.33", features = ["serde"] }
egui_plot = "0.34"
chrono = "0.4.23"
syntect = "5.0"
base64 = "0.21"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
egui_extras = { version = "0.33", features = ["image","file","svg","http","svg_text"] }
filebuffer = "0.4.0"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
json = "0.12.4"
lz-str = "0.2.0"
serde_yaml = "0.9"
yaml-rust = "0.4.5"
rand = "0.9.2"
walkdir = "2.3.1"
regex = "1.7.2"
fstream = "0.1.2"
egui-twemoji = "0.8"
rust-embed = "8.9.0"
zip = "7.0.0"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
log = "0.4"
duplicate = "2.0"
paste = "1.0"
pulldown-cmark = "0.13"
percent-encoding = "2.3"

[features]
default = ["serde", "pulldown_cmark", "better_syntax_highlighting"]
serde = []
pulldown_cmark = []
better_syntax_highlighting = []
macros = []
document-features = []
embedded_image = []

[target.'cfg(not(target_os = "android"))'.dependencies]
font-loader = "0.11"
directories = "2.0"
rfd = "0.11.3"
eframe = { version = "0.33", features = ["wgpu"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15", default-features = false }
eframe = { version = "0.33", default-features = false, features = ["glow", "android-native-activity", "default_fonts"] }
egui-winit = { version = "0.33", default-features = false, features = ["clipboard", "links"] }
egui_keyboard = "0.5"
jni = "0.21"
android-activity = "0.6"

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1
incremental = false
opt-level = 3


[package.metadata.android]
package_name = "com.example.marmol"
version_code = 1
version_name = "1.0"
label = "Marmol App"

# IMPORTANTE: Los permisos van en un array de strings
permissions = [
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.MANAGE_EXTERNAL_STORAGE",
    "android.permission.INTERNET" 
]

[package.metadata.android.activity]
name = "android.app.NativeActivity"
